fixed image scalling on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -108,4 +108,8 @@ section {
     margin: 20px 0;
     height: 80vh;
   }
+
+  .app-img {
+    height: auto;
+  }
 }
